--- a/numpytest/exercices.ipynb
+++ b/numpytest/exercices.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "482cc2ba",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9075f0d2",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "id": "9a85d25f",
    "metadata": {},
    "outputs": [
@@ -86,11 +86,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[41 31 27 44 19 19 36 43 34 36 46 32 20 34 33 42 13 14 20 29 31 10 31 17\n",
-      " 47 32 49 28 20 37 45 29 27 32 16 32 39 22 46 30 47 45 43 20 39 24 39 20\n",
-      " 17 48 20 44 25 12 21 33 39 30 28 38 40 26 23 43 10 33 49 25 36 44 43 39\n",
-      " 10 24 42 47 40 28 12 37 48 48 39 21 24 14 46 49 12 41 24 30 13 36 40 34\n",
-      " 49 25 44 11]\n",
+      "[29 10 11 47 13 21 24 26 25 20 23 31 23 17 32 45 29 39 49 19 41 32 46 27\n",
+      " 11 14 14 33 19 37 36 47 32 46 39 32 46 33 10 18 24 11 42 27 33 39 20 38\n",
+      " 22 39 10 46 39 49 43 32 28 37 27 43 42 15 20 24 13 22 31 41 24 13 16 29\n",
+      " 34 44 11 23 43 46 32 14 22 13 13 32 41 12 13 46 24 34 33 12 49 17 43 16\n",
+      " 16 25 15 38]\n",
       "[[1. 0. 0. 0. 0.]\n",
       " [0. 1. 0. 0. 0.]\n",
       " [0. 0. 1. 0. 0.]\n",
@@ -100,15 +100,15 @@
       " [ 6  7  8  9 10]\n",
       " [11 12 13 14 15]\n",
       " [16 17 18 19 20]]\n",
-      "[[54 75 32  8]\n",
-      " [ 7 15 73 36]\n",
-      " [23 23 27 69]\n",
-      " [14 30 58 65]]\n",
-      "[[[54 75 32  8]\n",
-      "  [ 7 15 73 36]]\n",
+      "[[33 24  6 18]\n",
+      " [10 62 28 51]\n",
+      " [52 16  2 19]\n",
+      " [ 1  9 22 47]]\n",
+      "[[[33 24  6 18]\n",
+      "  [10 62 28 51]]\n",
       "\n",
-      " [[23 23 27 69]\n",
-      "  [14 30 58 65]]]\n",
+      " [[52 16  2 19]\n",
+      "  [ 1  9 22 47]]]\n",
       "[[0 1 2]\n",
       " [3 4 5]]\n"
      ]
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "id": "e0884002",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 7,
    "id": "b5d3b3df",
    "metadata": {},
    "outputs": [
@@ -195,10 +195,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[53 21 -1 -1 95 -1 43 -1 -1 -1 75 27 47 -1 73 91 -1  5 47 49 -1 31 -1 47\n",
-      " 65 29 -1 -1 81 -1 15 -1 59 19 17 17 87 -1 67 -1 -1 85 -1 -1 11 23 69 17\n",
-      " -1 87]\n",
-      "[91 95]\n"
+      "[-1 -1  3 -1 -1 77 -1 -1 59 -1 21 -1 -1 -1 -1 -1 -1 13 23 -1 59 93 11 -1\n",
+      " 43 89 -1 11 71 -1 -1  5 -1 -1 -1 61 -1 85 -1 -1 21 -1 -1 33 21 69 -1 -1\n",
+      " -1 -1]\n",
+      "[89 93]\n"
      ]
     }
    ],
@@ -216,11 +216,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "19b48126",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1]\n",
+      " [2]\n",
+      " [3]]\n",
+      "[[11 21 31 41]\n",
+      " [12 22 32 42]\n",
+      " [13 23 33 43]]\n",
+      "(3, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. Crée un tableau de forme (3, 1) contenant [1, 2, 3].\n",
+    "# 2. Crée un autre tableau de forme (1, 4) contenant [10, 20, 30, 40].\n",
+    "# 3. Fais une addition entre les deux (broadcasting).\n",
+    "# 4. Que donne le résultat ? Quelle est sa forme ?\n",
+    "arr = np.arange(1, 4).reshape((3,1))\n",
+    "print(arr)\n",
+    "arr2 =np.arange(10, 41, 10).reshape((1,4))\n",
+    "print(arr+arr2)\n",
+    "print((arr+arr2).shape)"
+   ]
   }
  ],
  "metadata": {
