testing sklearn-features

--- a/numpytest/numpy_advanced_and_preprocessing.ipynb
+++ b/numpytest/numpy_advanced_and_preprocessing.ipynb
@@ -23,27 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(100, 100, 2)\n",
-      "8.412004901288087\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
-    "points = np.random.rand(100, 2) #genere des vecteurs aleatoires\n",
-    "diffs = points[:, np.newaxis, :] - points[np.newaxis, :, :] #calcule la difference\n",
-    "print(diffs.shape)\n",
-    "# distances = np.sqrt(np.sum(diffs ** 2, axis=-1))\n",
-    "distances2 = np.linalg.norm(points)\n",
-    "print(distances2)\n",
-    "# print(distances)"
+    "points = np.random.random((100, 2))"
    ]
   },
   {
