--- a/datasettest/meteopd.ipynb
+++ b/datasettest/meteopd.ipynb
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "80cf537a",
    "metadata": {},
    "outputs": [
@@ -978,7 +978,7 @@
        "[3650 rows x 8 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,6 +1010,227 @@
     "Edit\n",
     "df.groupby(\"Temp_cat\").size()\n",
     "df.groupby(\"Year\")[\"Temp\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "7f28ca94",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Temp</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>day</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>rolligntemp7</th>\n",
+       "      <th>rollingmonth</th>\n",
+       "      <th>mean_month</th>\n",
+       "      <th>temp_cat</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1981-01-01</td>\n",
+       "      <td>20.7</td>\n",
+       "      <td>1981</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>17.712903</td>\n",
+       "      <td>moderate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1981-01-02</td>\n",
+       "      <td>17.9</td>\n",
+       "      <td>1981</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>17.712903</td>\n",
+       "      <td>moderate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1981-01-03</td>\n",
+       "      <td>18.8</td>\n",
+       "      <td>1981</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>17.712903</td>\n",
+       "      <td>moderate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1981-01-04</td>\n",
+       "      <td>14.6</td>\n",
+       "      <td>1981</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>17.712903</td>\n",
+       "      <td>cold</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1981-01-05</td>\n",
+       "      <td>15.8</td>\n",
+       "      <td>1981</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>17.712903</td>\n",
+       "      <td>moderate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3645</th>\n",
+       "      <td>1990-12-27</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>27</td>\n",
+       "      <td>12</td>\n",
+       "      <td>13.100000</td>\n",
+       "      <td>14.390000</td>\n",
+       "      <td>14.367742</td>\n",
+       "      <td>cold</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3646</th>\n",
+       "      <td>1990-12-28</td>\n",
+       "      <td>13.6</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>28</td>\n",
+       "      <td>12</td>\n",
+       "      <td>13.171429</td>\n",
+       "      <td>14.353333</td>\n",
+       "      <td>14.367742</td>\n",
+       "      <td>cold</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3647</th>\n",
+       "      <td>1990-12-29</td>\n",
+       "      <td>13.5</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>29</td>\n",
+       "      <td>12</td>\n",
+       "      <td>13.214286</td>\n",
+       "      <td>14.313333</td>\n",
+       "      <td>14.367742</td>\n",
+       "      <td>cold</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3648</th>\n",
+       "      <td>1990-12-30</td>\n",
+       "      <td>15.7</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>30</td>\n",
+       "      <td>12</td>\n",
+       "      <td>13.471429</td>\n",
+       "      <td>14.413333</td>\n",
+       "      <td>14.367742</td>\n",
+       "      <td>moderate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3649</th>\n",
+       "      <td>1990-12-31</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>31</td>\n",
+       "      <td>12</td>\n",
+       "      <td>13.900000</td>\n",
+       "      <td>14.403333</td>\n",
+       "      <td>14.367742</td>\n",
+       "      <td>cold</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3650 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Date  Temp  Year  day  Month  rolligntemp7  rollingmonth  \\\n",
+       "0    1981-01-01  20.7  1981    1      1           NaN           NaN   \n",
+       "1    1981-01-02  17.9  1981    2      1           NaN           NaN   \n",
+       "2    1981-01-03  18.8  1981    3      1           NaN           NaN   \n",
+       "3    1981-01-04  14.6  1981    4      1           NaN           NaN   \n",
+       "4    1981-01-05  15.8  1981    5      1           NaN           NaN   \n",
+       "...         ...   ...   ...  ...    ...           ...           ...   \n",
+       "3645 1990-12-27  14.0  1990   27     12     13.100000     14.390000   \n",
+       "3646 1990-12-28  13.6  1990   28     12     13.171429     14.353333   \n",
+       "3647 1990-12-29  13.5  1990   29     12     13.214286     14.313333   \n",
+       "3648 1990-12-30  15.7  1990   30     12     13.471429     14.413333   \n",
+       "3649 1990-12-31  13.0  1990   31     12     13.900000     14.403333   \n",
+       "\n",
+       "      mean_month  temp_cat  \n",
+       "0      17.712903  moderate  \n",
+       "1      17.712903  moderate  \n",
+       "2      17.712903  moderate  \n",
+       "3      17.712903      cold  \n",
+       "4      17.712903  moderate  \n",
+       "...          ...       ...  \n",
+       "3645   14.367742      cold  \n",
+       "3646   14.367742      cold  \n",
+       "3647   14.367742      cold  \n",
+       "3648   14.367742  moderate  \n",
+       "3649   14.367742      cold  \n",
+       "\n",
+       "[3650 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['temp_cat'] = pd.cut(\n",
+    "    df['Temp'],\n",
+    "    bins=[-float('inf'), 15,35, float('inf')],\n",
+    "    labels= ['cold','moderate', 'hot']\n",
+    ")\n",
+    "\n",
+    "df"
    ]
   }
  ],
